style: support golangci-lint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ on:
       - master
 
 jobs:
-  build:
+  test:
+    name: test
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,3 +26,16 @@ jobs:
         run: |
           chmod +x ./scripts/run_tests.sh
           ./scripts/run_tests.sh
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go 1.21
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
